--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 Need to think of something amazing to put here...
 
-
+<script type="text/javascript">
+//<![CDATA[
 myDate=new Date(); 
 cmas=Date.parse("Dec 25, "+myDate.getFullYear()) 
 today=Date.parse(myDate) 
@@ -15,3 +16,4 @@ document.write("<br>Christmas was "+-1*(daysToChristmas)+" days ago.");
 if (daysToChristmas>0) 
 document.write("<br>There are "+daysToChristmas+" days to Christmas!") 
 document.write("</b>") 
+</script>
