--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 Need to think of something amazing to put here...
 
-<script type="text/javascript">
-//<![CDATA[
+<script>
 myDate=new Date(); 
 cmas=Date.parse("Dec 25, "+myDate.getFullYear()) 
 today=Date.parse(myDate) 
