--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ document.write("<b>");
 if (daysToChristmas==0) 
 document.write("Today is Christmas ... Merry Christmas!") 
 if (daysToChristmas<0) 
-document.write("<br>Christmas was "+-1*(daysToChristmas)+" days ago."); 
+document.write("<br>Christmas was "+-1*(daysToChristmas)+" sleeps ago."); 
 if (daysToChristmas>0) 
-document.write("<br>There are "+daysToChristmas+" days to Christmas!") 
+document.write("<br>There are "+daysToChristmas+" sleeps to Christmas!") 
 document.write("</b>") 
 </script>
