--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-Need to think of something amazing to put here...
+Need to think of something really amazing to put here...
+
+The new Costa at Marsh Mills is great.  No wifi though.
 
 <script>
 myDate=new Date(); 
