--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 Need to think of something really amazing to put here...
 
-The new Costa at Marsh Mills is great.  No wifi though.
 
 <script>
 myDate=new Date(); 
@@ -18,3 +17,13 @@ if (daysToChristmas>0)
 document.write("<br>There are "+daysToChristmas+" sleeps to Christmas!") 
 document.write("</b>") 
 </script>
+
+
+Father Christmas' naughty list:
+
+Stephanie Trelease
+Felix Trelease
+Faith Trelease
+Lucy Trelease
+Piran Avery
+Jack Avery
